--- a/TypeScripter/TypeScripter.csproj
+++ b/TypeScripter/TypeScripter.csproj
@@ -39,11 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TypeReader.cs" />
     <Compile Include="Scripter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeScript\TsFunction.cs" />
-    <Compile Include="TypeScript\TsArgument.cs" />
-    <Compile Include="TypeScript\TsWriter.cs" />
+    <Compile Include="TypeScript\TsParameter.cs" />
+    <Compile Include="TypeScript\TsName.cs" />
+    <Compile Include="TypeScript\TsFormatter.cs" />
     <Compile Include="TypeScript\TsProperty.cs" />
     <Compile Include="TypeScript\TsInterface.cs" />
     <Compile Include="TypeScript\TsEnum.cs" />
@@ -52,6 +54,9 @@
     <Compile Include="TypeScript\TsObject.cs" />
     <Compile Include="TypeScript\TsModule.cs" />
     <Compile Include="TypeScript\TsType.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Readers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
