--- a/TypeScripter/TypeScripter.csproj
+++ b/TypeScripter/TypeScripter.csproj
@@ -32,6 +32,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -39,7 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TypeReader.cs" />
+    <Compile Include="Readers\CompositeTypeReader.cs" />
+    <Compile Include="Readers\ServiceContractTypeReader.cs" />
+    <Compile Include="Readers\DataContractTypeReader.cs" />
+    <Compile Include="Resolvers\DefaultTypeResolver.cs" />
+    <Compile Include="Resolvers\ITypeResolver.cs" />
+    <Compile Include="Readers\DefaultTypeReader.cs" />
+    <Compile Include="Readers\ITypeReader.cs" />
     <Compile Include="Scripter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeScript\TsFunction.cs" />
@@ -55,9 +63,7 @@
     <Compile Include="TypeScript\TsModule.cs" />
     <Compile Include="TypeScript\TsType.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Readers\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
