Adding NuGet nuspec

--- a/TypeScripter/TypeScripter.csproj
+++ b/TypeScripter/TypeScripter.csproj
@@ -63,7 +63,9 @@
     <Compile Include="TypeScript\TsModule.cs" />
     <Compile Include="TypeScript\TsType.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="TypeScripter.nuspec" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
