--- a/TypeScripter.Tests/TypeScripter.Tests.csproj
+++ b/TypeScripter.Tests/TypeScripter.Tests.csproj
@@ -39,6 +39,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,6 +51,7 @@
     <Compile Include="AssemblyTest.cs" />
     <Compile Include="InheritanceTest.cs" />
     <Compile Include="GenericsTest.cs" />
+    <Compile Include="Examples.cs" />
     <Compile Include="Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeScriptCompiler.cs" />
