--- a/TypeScripter/TypeScripter.csproj
+++ b/TypeScripter/TypeScripter.csproj
@@ -42,10 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Readers\CompositeTypeReader.cs" />
+    <Compile Include="Readers\TypeReader.cs" />
     <Compile Include="Readers\ServiceContractTypeReader.cs" />
     <Compile Include="Readers\DataContractTypeReader.cs" />
-    <Compile Include="Readers\DefaultTypeReader.cs" />
-    <Compile Include="Readers\ITypeReader.cs" />
     <Compile Include="Scripter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeScript\TsGenericType.cs" />
