--- a/TypeScripter/TypeScripter.nuspec
+++ b/TypeScripter/TypeScripter.nuspec
@@ -11,7 +11,7 @@
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Initial release.</releaseNotes>
+    <releaseNotes>Field support</releaseNotes>
     <copyright>Copyright 2015</copyright>
     <tags>TypeScript Definitions</tags>
   </metadata>
