--- a/Src/TypeScripter.Tests/TypeScripter.Tests.csproj
+++ b/Src/TypeScripter.Tests/TypeScripter.Tests.csproj
@@ -18,7 +18,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NETCLR</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -26,7 +26,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;NETCLR</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -46,10 +46,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyTest.cs" />
+    <Compile Include="Examples\Ex5.Formatters.cs" />
+    <Compile Include="Examples\Ex4.TypeReaders.cs" />
+    <Compile Include="Examples\Ex3.Generics.cs" />
+    <Compile Include="Examples\Ex2.Inheritance.cs" />
+    <Compile Include="Examples\Ex1.BasicUsage.cs" />
     <Compile Include="Fields.cs" />
     <Compile Include="InheritanceTest.cs" />
     <Compile Include="GenericsTest.cs" />
-    <Compile Include="Examples.cs" />
     <Compile Include="Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeScriptCompiler.cs" />
