--- a/Src/TypeScripter/project.json
+++ b/Src/TypeScripter/project.json
@@ -20,7 +20,7 @@
     }
   },
   "dependencies": {
-    "NETStandard.Library": "1.6.0"
+    "NETStandard.Library": "1.6.0",
   },
   "configurations": {
     "Release": {
@@ -30,6 +30,11 @@
     }
   },
   "frameworks": {
+	"net45": {
+      "frameworkAssemblies": {
+        "System.Runtime.Serialization": "",
+      }
+    },
     "netstandard1.6": {
       "imports": "dnxcore50",
       "buildOptions": {
