--- a/Src/TypeScripter/TypeScripter.csproj
+++ b/Src/TypeScripter/TypeScripter.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeScript\TsGenericType.cs" />
     <Compile Include="TypeScript\TsFunction.cs" />
+    <Compile Include="TypeScript\TsIndexerProperty.cs" />
+    <Compile Include="TypeScript\TsInlineInterface.cs" />
     <Compile Include="TypeScript\TsTypeParameter.cs" />
     <Compile Include="TypeScript\TsParameter.cs" />
     <Compile Include="TypeScript\TsName.cs" />
