render nullable type as optional type

--- a/Src/TypeScripter.Tests/TypeScripter.Tests.csproj
+++ b/Src/TypeScripter.Tests/TypeScripter.Tests.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Assemblies.cs" />
     <Compile Include="Dictionaries.cs" />
+    <Compile Include="NullableTypes.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Examples\Ex5.Formatters.cs" />
     <Compile Include="Examples\Ex4.TypeReaders.cs" />
