--- a/Src/TypeScripter.Tests/TypeScripter.Tests.csproj
+++ b/Src/TypeScripter.Tests/TypeScripter.Tests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Examples\Ex2.Inheritance.cs" />
     <Compile Include="Examples\Ex1.BasicUsage.cs" />
     <Compile Include="Fields.cs" />
+    <Compile Include="Structs.cs" />
     <Compile Include="Inheritance.cs" />
     <Compile Include="Generics.cs" />
     <Compile Include="Test.cs" />
